# git-todos

./: .todos.toml  Cargo.toml  README-ja.md  README.md
src/: .tags  error.rs  interfaces.rs  main.rs  todo.rs
src/interfaces/: cli.rs  common.rs  messages.rs  names.rs  preferences.rs
src/interfaces/cli/: body.rs  functions.rs
src/interfaces/common/: messages.rs  names.rs  utilities.rs
src/interfaces/preferences/: body.rs  language.rs
src/todo/: entry.rs  list.rs
