[package]
name = "git-todos"
version = "0.1.0"
edition = "2021"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
chrono = "0.4"
clap = {version = "3.1", features = ["derive"]}
getset = "0.1"
serde="1.0"
serde_derive = "1.0"
sys-locale = "0.2"
termion = "1.5"
thiserror = "1.0"
toml = "0.5"
unicode-width = "0.1"
