[package]
name = "git-todos"
authors = ["Yuichi Ishida <yu1guana@gmail.com>"]
version = "0.1.0"
description = "A Git based Todos App"
repository = "https://github.com/yu1guana/git-todos"
license-file = "LICENSE"
readme = "README.md"
edition = "2021"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
lto = true
panic = 'abort'
codegen-units = 1

[dependencies]
anyhow = "1.0.68"
chrono = "0.4.23"
clap = {version = "4.0.32", features = ["derive"]}
derive-new = "0.5.9"
getset = "0.1.2"
serde="1.0.152"
serde_derive = "1.0.152"
sys-locale = "0.2.3"
termion = "1.5"
thiserror = "1.0.38"
toml = "0.5.10"
unicode-width = "0.1.10"
